src/objects/GIS_Update_Request__c.object
<CustomObject>
    <description>use to track mapping update request from the GIS team</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GIS_Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shape_UpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shape Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GIS_Update_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shape_Updated_Date__c</fullName>
        <label>Shape Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>GIS Update Requests</relationshipLabel>
        <relationshipName>GIS_Update_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gisUnitName__c</fullName>
        <formula>Unit__r.GIS_Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GIS Unit Name</label>
        <type>Text</type>
    </fields>
    <label>GIS Update Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unit__c</columns>
        <columns>gisUnitName__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed_By__c</columns>
        <columns>Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Incomplete</fullName>
        <columns>NAME</columns>
        <columns>Unit__c</columns>
        <columns>gisUnitName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Completion_Date__c</columns>
        <columns>Completed_By__c</columns>
        <columns>Comments__c</columns>
        <columns>Shape_UpdatedBy__c</columns>
        <columns>Shape_Updated_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed_By__c</field>
            <operation>equals</operation>
        </filters>
        <label>Incomplete</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>gisUnitName__c</columns>
        <columns>Unit__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shape_Updated_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open</label>
    </listViews>
    <nameField>
        <displayFormat>GIS-{000000000}</displayFormat>
        <label>GIS Update Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GIS Update Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>